welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:27: error: not found: value etCouleurBrosse
  etCouleurBrosse(Color.green)
  ^